Fixed layout bug on details page

--- a/src/styles/_Details.scss
+++ b/src/styles/_Details.scss
@@ -24,8 +24,6 @@
 /** Right **/
 
 .detailsPage-right {
-  display: flex;
-  flex-direction: column;
   margin-left: 166px;
   width: 100%;
   padding: 8px;
